deploy/terraform/modules/base_vpc/gateways.tf
resource "aws_internet_gateway" "main" {
  vpc_id = "${aws_vpc.main.id}"

  tags = {
    Name = "${var.vpc_name} IGW"
  }
}
